test/errors/type/undef/tobool.yasl


mt.lookup(undef, .tobool)(1)
